WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310900
WebKit BinCompat: Missing C-API WKPageIsPlayingVideoInEnhancedFullscreen()
https://bugs.webkit.org/show_bug.cgi?id=310900
Summary
WebKit BinCompat: Missing C-API WKPageIsPlayingVideoInEnhancedFullscreen()
Dana Estra
Reported
2026-03-27 08:19:38 PDT
WebKit BinCompat: Missing C-API WKPageIsPlayingVideoInEnhancedFullscreen()
Attachments
Add attachment
proposed patch, testcase, etc.
Dana Estra
Comment 1
2026-03-27 08:19:39 PDT
<
rdar://problem/173462235
>
Dana Estra
Comment 2
2026-03-27 08:22:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61500
EWS
Comment 3
2026-03-27 12:21:04 PDT
Committed
310095@main
(afa0a083488d): <
https://commits.webkit.org/310095@main
> Reviewed commits have been landed. Closing PR #61500 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug