WebKit BinCompat: Missing C-API WKPageIsPlayingVideoInEnhancedFullscreen() https://bugs.webkit.org/show_bug.cgi?id=310900 rdar://173462235

Reviewed by Jer Noble.

Add WKPageIsPlayingVideoInEnhancedFullscreen() back in as a deprecated
synonym of WKPageIsPlayingVideoInPictureInPicture().

No new tests.

* Source/WebKit/UIProcess/API/C/mac/WKPagePrivateMac.h:
* Source/WebKit/UIProcess/API/C/mac/WKPagePrivateMac.mm:
(WKPageIsPlayingVideoInEnhancedFullscreen):

Canonical link: https://commits.webkit.org/310095@main